# gstreamer-filter

./: CMakeLists.txt  main.cpp
